# _AuditStandard_parsing

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
docs/: PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  anthropic_rag_pipeline_usage.md  assurance_other_structure_profile.md  checkpoint_1_review.md  checkpoint_2_review.md  checkpoint_3_prep.md  checkpoint_3_review.md  checkpoint_4_prep.md  checkpoint_4_review.md  devils_advocate_checkpoint_0.md  devils_advocate_checkpoint_1.md  devils_advocate_checkpoint_2.md  devils_advocate_checkpoint_3.md  devils_advocate_checkpoint_4.md  f4_known_duplicates.md  framework_structure_profile.md  ifrs_reference_map.md  isa_structure_profile.md  isqm_structure_profile.md  json_schema.md  numbering_strategy.md  phase_4_plan.md
notebooks/: phase4_llm_rag_test.ipynb  search_test.ipynb
scripts/: migrate_schema_v1_2.py  phase4f_eval.py  validate_json.py
src/audit_parser/: cli.py
tests/: test_assr_spec.py  test_chunk_splitter.py  test_cli.py  test_embedder.py  test_frmk_spec.py  test_isqm_spec.py  test_isqm_table_parser.py  test_json_schema_compliance.py  test_md_parser.py  test_md_parser_phase4.py  test_md_renderer.py  test_numbering.py  test_phase4c_integration.py  test_phase4e_qdrant_payload.py  test_qdrant_writer.py  test_standard_spec.py  test_structure.py  test_styles.py  test_xml_safe.py
tests/fixtures/: isa_profile_samples.json  isqm_mini_golden_dataset.jsonl  json_schema_v1_1.schema.json  json_schema_v1_2.schema.json  style_numpr_cases.json  (+2 more)
(+22 files in other folders)
