[project]
name = "audit-parser"
version = "0.1.0"
description = "회계감사기준(ISA) DOCX → MD → JSON → Qdrant 파이프라인"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
    "qdrant-client>=1.12",
    "openai>=1.0.0",
    "typer>=0.12",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.7", "mypy>=1.11"]

[project.scripts]
audit-parser = "audit_parser.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_parser"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
